[gd_scene load_steps=4 format=3 uid="uid://bl27qv24us70m"]

[ext_resource type="Script" path="res://addons/rivet/devtools/dock/playtest_tab.gd" id="1_4p5p5"]
[ext_resource type="PackedScene" uid="uid://bogw8dj8rr202" path="res://addons/rivet/devtools/dock/elements/namespace_menu_button.tscn" id="1_brqcl"]
[ext_resource type="PackedScene" uid="uid://bdpu38hakasqq" path="res://addons/rivet/devtools/dock/elements/buttons_bar.tscn" id="2_hd7vo"]

[node name="Playtest" type="MarginContainer"]
script = ExtResource("1_4p5p5")

[node name="PlaytestContent" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ButtonsBar" parent="PlaytestContent" instance=ExtResource("2_hd7vo")]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="ThisMachineButton" type="Button" parent="PlaytestContent/ButtonsBar"]
layout_mode = 2
tooltip_text = "Test against your local machine to iterate quickly in the editor."
mouse_default_cursor_shape = 2
toggle_mode = true
button_pressed = true
text = "This machine"

[node name="RivetServersButton" type="Button" parent="PlaytestContent/ButtonsBar"]
layout_mode = 2
tooltip_text = "Deploy your game to Rivet's servers to playtest with others."
mouse_default_cursor_shape = 2
toggle_mode = true
text = "Rivet servers"

[node name="Namepsace" type="VBoxContainer" parent="PlaytestContent"]
layout_mode = 2

[node name="Namespace" type="Label" parent="PlaytestContent/Namepsace"]
layout_mode = 2
size_flags_horizontal = 3
text = "Namespace"

[node name="AuthNamespaceSelector" parent="PlaytestContent/Namepsace" instance=ExtResource("1_brqcl")]
layout_mode = 2

[node name="NamespaceDescription" type="RichTextLabel" parent="PlaytestContent/Namepsace"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Configure which configuration should be emulated. [url=https://rivet.gg/docs/general/concepts/dev-tokens]Learn more...[/url]"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="WarningLabel" type="RichTextLabel" parent="PlaytestContent/Namepsace"]
unique_name_in_owner = true
layout_mode = 2
text = " Please make sure that you’re using the same version that’s deployed.
Using different versions can cause some unforeseen issues."
fit_content = true
scroll_active = false

[node name="ErrorLabel" type="RichTextLabel" parent="PlaytestContent/Namepsace"]
unique_name_in_owner = true
layout_mode = 2
text = " Before you can test online, you need to deploy your current game version to Rivet. 
In order to deploy current game version to the cloud, click the button below."
fit_content = true
scroll_active = false

[node name="DeployButton" type="Button" parent="PlaytestContent/Namepsace"]
unique_name_in_owner = true
layout_mode = 2
text = "Deploy"

[node name="HSeparator" type="HSeparator" parent="PlaytestContent"]
layout_mode = 2

[node name="Game Server" type="VBoxContainer" parent="PlaytestContent"]
layout_mode = 2

[node name="GameServer" type="Label" parent="PlaytestContent/Game Server"]
layout_mode = 2
size_flags_horizontal = 3
text = "Game Server"

[node name="HBoxContainer" type="HBoxContainer" parent="PlaytestContent/Game Server"]
layout_mode = 2
alignment = 1

[node name="GameServerStartButton" type="Button" parent="PlaytestContent/Game Server/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="GameServerStopButton" type="Button" parent="PlaytestContent/Game Server/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Stop"

[node name="GameServerRestartButton" type="Button" parent="PlaytestContent/Game Server/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Restart
"

[node name="GameServerStatusLabel" type="Label" parent="PlaytestContent/Game Server"]
unique_name_in_owner = true
layout_mode = 2
text = "Game server not running"

[node name="GameServerShowLogs" type="CheckBox" parent="PlaytestContent/Game Server"]
unique_name_in_owner = true
layout_mode = 2
text = "Show Server Logs"

[connection signal="pressed" from="PlaytestContent/Game Server/HBoxContainer/GameServerStartButton" to="." method="_on_game_server_start_pressed"]
[connection signal="pressed" from="PlaytestContent/Game Server/HBoxContainer/GameServerStopButton" to="." method="_on_game_server_stop_pressed"]
[connection signal="pressed" from="PlaytestContent/Game Server/HBoxContainer/GameServerRestartButton" to="." method="_on_game_server_restart_pressed"]
